section info box's

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                     <div class="info-items-box-icon"><img src="assets/img/icons/cozimento.png" alt=""></div>
                     <div class="info-items-box-text">
                         <h3>Cozimento Delicioso</h3>
-                        <p>Nosso pão é feito na hora diariamente, não contém conservantes e é de altíssima qualidade. Também é especialmente agradável e macio</p>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod deleniti quis voluptatibus consequuntur blanditiis fuga nobis, ad deserunt magnam animi.</p>
                     </div>
                 </div>
             </div>
