--- a/index.html
+++ b/index.html
@@ -200,6 +200,82 @@
             </div>
 
     </section>
+
+    <!-- SEÇÃO DOS DOCES -->
+    <section class="sweets-section">
+        <div class="sweets-section-title">
+            <h2>Doces</h2>
+        </div>
+
+        <div class="sweets-container">
+            <div class="sweets-container-box">
+                <h3>Cookies</h3>
+                <ul>
+                    <li>Biscoito</li>
+                    <li>Chocolate Chip</li>
+                    <li>Oatmeal Pecan</li>
+                    <li>Oat Ginger Bar</li>
+                    <li>Seasonal specials</li>
+                </ul>
+
+            </div>
+            <div class="sweets-container-box">
+                <h3>Scones</h3>
+                <ul>
+                    <li>Classic butter scone</li>
+                    <li>Fresh fruit buttermilk scones</li>
+                    <li>Handmade scones</li>
+                </ul>
+
+            </div>
+            <div class="sweets-container-box">
+                <h3>Other</h3>
+                <ul>
+                    <li>Seasonal galletes</li>
+                    <li>Tartlets</li>
+                    <li>Banana Bread</li>
+                    <li>Bread Pudding</li>
+                    <li>Cranberry Pecan Granola</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
+    <section class="contact-section">
+        <div class="contact-section-text">
+            <div class="text">
+                <h2>Nos visite</h2>
+                <p>Avenida XX 1234, Rolim de Moura - Rondônia</p>
+            </div>
+
+            <div class="text">
+                <h3>Horas</h3>
+                <p>Segunda - Sexta</p>
+                <p>7 às 18</p>
+                <br>
+                <p>Sábado</p>
+                <p>6 às 12</p>
+            </div>
+
+            
+
+            <div class="text">
+                <h3>Telefone</h3>
+                <p>(69) 1234-5678</p>
+            </div>
+        </div>
+
+        <div class="contact-section-image">
+
+        </div>
+
+    </section>
     
+    <footer>
+        <h2>Créditos das imagens <a href="https://br.freepik.com/">Freepik</a></h2>
+        <p>Feito por Ryan Campos</p>
+    </footer>
+
+
 </body>
 </html>
